[CI] Publish Documentation for 20f396c0a85dcddced09ce131125a5f43c45c6e6 - 20f396c0a85dcddced09ce131125a5f43c45c6e6 🚀

--- a/404.html
+++ b/404.html
@@ -48,10 +48,10 @@
 <div class="nav-panel-explore is-active" data-panel="explore">
   <ul class="components">
     <li class="component">
-      <span class="title">Template Tutorial</span>
+      <span class="title">Ansible Operator Road Trip</span>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/ansible-operator-road-trip-guide/template-tutorial/index.html">master</a>
+          <a href="/ansible-operator-road-trip-guide/ansible-operator-road-trip-guide/main/index.html">main</a>
         </li>
       </ul>
     </li>
@@ -63,6 +63,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
+  <a href="/ansible-operator-road-trip-guide/ansible-operator-road-trip-guide/main/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
 </nav>
 </div>
