[CI] Publish Documentation for 1365e960555cda93c089ec05a16d4cbeb806381c - 1365e960555cda93c089ec05a16d4cbeb806381c 🚀

--- a/ansible-operator-road-trip-guide/main/06-deploying-your-operator-using-olm.html
+++ b/ansible-operator-road-trip-guide/main/06-deploying-your-operator-using-olm.html
@@ -295,10 +295,10 @@ INFO[0000] All validation tests have completed successfully</code></pre>
 </div>
 <div class="paragraph">
 <p>Also have a look to
-<code>./config/manifests/base/minerva.clusterserviceversion.yaml</code> this file is a template and is where you should make changes to <code>name</code>, <code>description</code>, <code>icon</code>, etc.</p>
+<code>./config/manifests/base/minerva-operator.clusterserviceversion.yaml</code> this file is a template and is where you should make changes to <code>name</code>, <code>description</code>, <code>icon</code>, etc.</p>
 </div>
 <div class="paragraph">
-<p>For instance edit the file <code>minerva.clusterserviceversion.yaml</code> and change <code>spec.description</code> with the proposed text.</p>
+<p>For instance edit the file <code>minerva-operator.clusterserviceversion.yaml</code> and change <code>spec.description</code> with the proposed text.</p>
 </div>
 <div class="admonitionblock caution">
 <table>
