--- a/ansible-operator-road-trip-guide/main/03-building-your-1st-operator.html
+++ b/ansible-operator-road-trip-guide/main/03-building-your-1st-operator.html
@@ -573,11 +573,157 @@ catalog-undeploy:    # 6. Clean 2. Delete Catalog
 </div>
 </div>
 <div class="sect1">
-<h2 id="_building_v0_0_1"><a class="anchor" href="#_building_v0_0_1"></a>Building v0.0.1</h2>
+<h2 id="configuring-operator"><a class="anchor" href="#configuring-operator"></a>Configuring operator</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="adding-permissions-on-configmaps"><a class="anchor" href="#adding-permissions-on-configmaps"></a>Adding permissions on <code>ConfigMaps</code></h3>
+<div class="paragraph">
+<p>Before we can deploy our operator in a kubernetes cluster we have to adapt permissions so that the operator can handle <code>ConfigMaps</code>.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+The problem would be seen only after deploying the operator using the Operator Lifecycle Manager and has to do with the leader election.
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Please open file <code>./config/rbac/role.yaml</code> and add <code>- configmaps</code> in the next excerpt.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: manager-role
+rules:
+  ##
+  ## Base operator rules
+  ##
+  - apiGroups:
+      - ""
+    resources:
+      - secrets
+      - pods
+      - pods/exec
+      - pods/log
+      - configmaps <i class="conum" data-value="1"></i><b>(1)</b>
+...</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>This is where you should add <code>- configmaps</code></td>
+</tr>
+</table>
+</div>
+</div>
+<div class="sect2">
+<h3 id="updating-categories"><a class="anchor" href="#updating-categories"></a>Updating categories this operator belongs to</h3>
+<div class="paragraph">
+<p>Please open file <code>./config/manifests/bases/minerva-operator.clusterserviceversion.yaml</code> and add a <code>categories</code> annotation as follows.</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">...
+spec:
+metadata:
+  annotations:
+    alm-examples: '[]'
+    capabilities: Basic Install
+    categories: Other <i class="conum" data-value="1"></i><b>(1)</b>
+....</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td><code>Other</code> is just an example category, you can change it to something more suitable if you want</td>
+</tr>
+</table>
+</div>
+</div>
+<div class="sect2">
+<h3 id="updating-install-mode"><a class="anchor" href="#updating-install-mode"></a>Updating install mode</h3>
+<div class="paragraph">
+<p>If not already opened, please open file <code>./config/manifests/bases/minerva-operator.clusterserviceversion.yaml</code> and update the supported install modes as in the next example.</p>
+</div>
+<div class="quoteblock">
+<blockquote>
+<div class="paragraph">
+<p><strong>InstallModes:</strong></p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>OwnNamespace</strong>: the operator can be a member of an OperatorGroup that selects its own namespace</p>
+</li>
+<li>
+<p><strong>SingleNamespace</strong>: the operator can be a member of an OperatorGroup that selects one namespace</p>
+</li>
+<li>
+<p><strong>MultiNamespace</strong>: the operator can be a member of an OperatorGroup that selects more than one namespace</p>
+</li>
+<li>
+<p><strong>AllNamespaces</strong>: the operator can be a member of an OperatorGroup that selects all namespaces (target namespace set is the empty string "")</p>
+</li>
+</ul>
+</div>
+</blockquote>
+<div class="attribution">
+&#8212; <a href="https://github.com/operator-framework">Operator Framework</a><br>
+<cite><a href="https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/building-your-csv.md#operator-install">Operator Install</a></cite>
+</div>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">...
+spec:
+  ...
+  installModes:
+  - supported: true        <i class="conum" data-value="1"></i><b>(1)</b>
+    type: OwnNamespace
+  - supported: true        <i class="conum" data-value="2"></i><b>(2)</b>
+    type: SingleNamespace
+  - supported: false
+    type: MultiNamespace
+  - supported: true
+    type: AllNamespaces
+...</code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>We&#8217;re going add support for <code>OwnNamespace</code></td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>We also add support for <code>SingleNamespace</code></td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1 0 1">
+<h2 id="coding-0"><a class="anchor" href="#coding-0"></a>Coding v0.0.1</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Well it’s time to look into the code and make it actually do something.
-As we have explained at the core of any operator lays a controller watching at Kubernetes events, in particular events related to objects of interest, for instance our CRDs and other object the operator owns (Pods, Deployments, etc.).</p>
+<p>Well it’s time to look into the code and make it actually do something.</p>
+</div>
+<div class="paragraph">
+<p>As we have explained at the core of any operator lays a controller watching at Kubernetes events, in particular events related to objects of interest, for instance our CRDs and other object the operator owns (Pods, Deployments, etc.).</p>
 </div>
 <div class="sect2">
 <h3 id="adding-actual-code"><a class="anchor" href="#adding-actual-code"></a>Adding Actual Code</h3>
